# carta

./: .editorconfig  .gitattributes  .gitignore  .typos.toml  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  clippy.toml  deny.toml  release-plz.toml  rust-toolchain.toml
crates/carta/: Cargo.toml
crates/carta-ast/: Cargo.toml
crates/carta-ast/src/: ast.rs  lib.rs  serde_impls.rs
crates/carta-ast/src/codec/: de.rs  (+2 more)
crates/carta-ast/tests/: codec.rs  codec_differential.rs  codec_roundtrip.rs
crates/carta-cli/: Cargo.toml
crates/carta-cli/src/: main.rs
crates/carta-cli/tests/: cli.rs
crates/carta-core/: Cargo.toml
crates/carta-core/src/: extensions.rs  lib.rs  sections.rs  stack.rs  walk.rs
crates/carta-highlight/: Cargo.toml  LICENSE-MIT  build.rs
crates/carta-highlight/data/: languages.txt
crates/carta-highlight/examples/: dump.rs
crates/carta-highlight/src/: grammar.rs  highlighter.rs  lib.rs  parse.rs  registry.rs  style.rs  token.rs
crates/carta-highlight/tests/: interpreter.rs
crates/carta-readers/: Cargo.toml
crates/carta-readers/data/: README.md
crates/carta-readers/src/: csv.rs  docx.rs  dokuwiki.rs  emoji.rs  entities.rs  epub.rs  heading_ids.rs  inline_scan.rs  inline_text.rs  ipynb.rs  jira.rs  json.rs  latex.rs  lib.rs  man.rs  mathml.rs  mediawiki.rs  metadata.rs  native.rs  numeric.rs  odt.rs  opml.rs  org.rs  roman.rs  rst.rs  rtf.rs  smart_fold.rs  tabs.rs  transliterate.rs  tsv.rs  url_schemes.rs  xml.rs  xml_entities.rs
crates/carta-writers/: Cargo.toml  build.rs
crates/carta-writers/data/: README.md
crates/carta-writers/src/: asciidoc.rs  beamer.rs  common.rs  commonmark.rs  dokuwiki.rs  embed.rs  grid.rs  highlight.rs  html.rs  image_size.rs  ipynb.rs  jira.rs  json.rs  latex.rs  lib.rs  man.rs  markdown.rs  markdown_common.rs  mediawiki.rs  native.rs  odt.rs  opml.rs  org.rs  plain.rs  revealjs.rs  rst.rs  rtf.rs  slides.rs  typst.rs
crates/carta-writers/tests/: entities_data_in_sync.rs  highlight_docx.rs  highlight_html.rs  highlight_latex.rs
crates/carta/benches/: convert.rs
crates/carta/src/: datadir.rs  filters.rs  format_spec.rs  lib.rs  main.rs  options.rs  registry.rs  resources.rs  standalone.rs  tests.rs
crates/carta/tests/: cli.rs  cli_highlight.rs  convert.rs  docx.rs  epub.rs  filters.rs  fuzz_wiring.rs  golden_e2e.rs  golden_reader.rs  golden_wrap.rs  golden_writer.rs  highlight_standalone.rs  highlight_theme.rs  media.rs  native_roundtrip.rs  odt.rs  render_stack.rs  spec_parse.rs  standalone.rs  standalone_snapshots.rs
crates/oxidoc/: Cargo.toml
crates/oxidoc-ast/: Cargo.toml
crates/oxidoc-ast/src/: ast.rs  codec.rs  lib.rs  serde_impls.rs
crates/oxidoc-ast/tests/: codec.rs  codec_roundtrip.rs
crates/oxidoc-cli/: Cargo.toml
crates/oxidoc-cli/src/: main.rs
crates/oxidoc-cli/tests/: cli.rs
crates/oxidoc-core/: Cargo.toml
crates/oxidoc-core/src/: extensions.rs  lib.rs
crates/oxidoc-readers/: Cargo.toml  build.rs
crates/oxidoc-readers/src/: html.rs  json.rs  lib.rs  native.rs
crates/oxidoc-testkit/: Cargo.toml
crates/oxidoc-testkit/src/: command_test.rs  commonmark_spec.rs  differential.rs  lib.rs  roundtrip.rs
crates/oxidoc-testkit/tests/: commonmark.rs  fixtures.rs  html_reader.rs  latex_writer.rs  native_reader.rs  native_writer.rs  plain_writer.rs  roundtrip.rs  rst_writer.rs  writer.rs
crates/oxidoc-writers/: Cargo.toml  build.rs
crates/oxidoc-writers/src/: common.rs  commonmark.rs  html.rs  json.rs  latex.rs  lib.rs  mediawiki.rs  native.rs  plain.rs  rst.rs
crates/oxidoc/src/: lib.rs  registry.rs
crates/oxidoc/tests/: convert.rs  golden_reader.rs  golden_writer.rs  native_roundtrip.rs  spec_parse.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: commonmark.rs  csv.rs  docx.rs  epub.rs  highlight.rs  html.rs  ipynb.rs  jira.rs  json.rs  latex.rs  native.rs  opml.rs  org.rs  read_dokuwiki.rs  read_html.rs  read_man.rs  read_mediawiki.rs  read_native.rs  read_odt.rs  read_tsv.rs  rst.rs  rtf.rs  write_asciidoc.rs  write_beamer.rs  write_commonmark.rs  write_docx.rs  write_dokuwiki.rs  write_epub.rs  write_html.rs  write_ipynb.rs  write_jira.rs  write_json.rs  write_latex.rs  write_man.rs  write_markdown.rs  write_mediawiki.rs  write_native.rs  write_odt.rs  write_opml.rs  write_org.rs  (+5 more)
fuzz/seeds/commonmark/: stack-overflow-7d3ae40b7a2794eb6107198a8fa7c812e4e57596
fuzz/seeds/dokuwiki/: basic.dokuwiki  oom-6b19a1bda3144a508d113b8fb0f31990af084389  timeout-9251856ce19e39f260b48e32b1ee3c83927cd7a5
fuzz/seeds/highlight/: cpp.txt  haskell.txt  python.txt
fuzz/seeds/ipynb/: basic.ipynb
fuzz/seeds/jira/: basic.jira
fuzz/seeds/json/: basic.json
fuzz/seeds/man/: basic.man
fuzz/seeds/mediawiki/: basic.mediawiki  crash-f78459014863cec4fa02048a62c0b7ca55c20b37
fuzz/seeds/native/: basic.native
fuzz/seeds/org/: basic.org
fuzz/seeds/read_commonmark/: basic.md  bracket-nest  emphasis-chain  stack-overflow-4445d06ed31cfca55f14cb58ccf8ddf117713dc3
fuzz/seeds/read_docx/: basic.docx
fuzz/seeds/read_dokuwiki/: oom-224096d2d21c30f15e869a5db8993ab4cd4f2bd8  oom-3ceec0b4e001f663e387e334688f1dbe67d6e4d6
fuzz/seeds/read_epub/: cross-file.epub
fuzz/seeds/read_html/: basic.html  oom-ad17cfe0eec0eb4b3e7668f3bb28d2d20f4db944
fuzz/seeds/read_ipynb/: stack-overflow-d228f0d0453139cf8ab4275155fc64cd9e1fa96e
fuzz/seeds/read_jira/: timeout-17c1f0cec549d72fbe0526787cc498f2835c4840
fuzz/seeds/read_latex/: basic.tex
fuzz/seeds/read_man/: timeout-f954f3d8b49cd5be7a0db535260dee4ad174207e
fuzz/seeds/read_mediawiki/: oom-5721e54875eaf6859e0697f09c556e2b6f433290  timeout-5ed875d7f29c884f7eecb0f1d732d9cfeb9b6a2a
fuzz/seeds/read_odt/: basic.odt
fuzz/seeds/read_opml/: basic.opml
fuzz/seeds/read_rst/: basic.rst  crash-1a2d7964a04a62388d68b84cf13a5a363759150b
fuzz/seeds/read_rtf/: deep-list.rtf
fuzz/seeds/read_tsv/: basic.tsv
fuzz/seeds/rtf/: basic.rtf  deep-nesting.rtf
fuzz/seeds/write_asciidoc/: basic-document  oom-39cbabbab3d966783ad7ee034f37e92cfb4aeec4
fuzz/seeds/write_beamer/: basic-document  (+1 more)
fuzz/src/: lib.rs
(+6821 files in other folders)
