[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.93"
authors = ["Maximilian Krause"]
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
# Shared dependency versions. Crates opt in via `dep = { workspace = true }`.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
unicode-general-category = "1"
caseless = "0.2"
insta = "1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Internal crates
carta = { path = "crates/carta" }
carta-ast = { path = "crates/carta-ast" }
carta-core = { path = "crates/carta-core" }
carta-readers = { path = "crates/carta-readers" }
carta-writers = { path = "crates/carta-writers" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic relaxations of pedantic noise; tighten later if desired.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Panic discipline (clippy::restriction). A document converter ingests arbitrary input; a panic on
# malformed input is a correctness bug and a DoS vector. Propagate errors via `Result`/`?` instead.
# These are allowed in tests via clippy.toml.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

# Optimize dependencies even in debug builds; keeps differential test runs (which shell out a lot)
# from being dominated by unoptimized dependency code.
[profile.dev.package."*"]
opt-level = 2

# Overflow wraps silently in release by default. Readers do arithmetic on byte offsets, positions,
# and counts; a silent wrap is a latent correctness bug. The check is cheap insurance for a
# correctness-critical parser.
[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
strip = "symbols"
