[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.7"
edition = "2024"
rust-version = "1.93"
authors = ["Maximilian Krause"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mfkrause/carta"
homepage = "https://github.com/mfkrause/carta"
readme = "README.md"
publish = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
unicode-general-category = "1"
unicode-normalization = "0.1"
caseless = "0.2"
# The `serde` integration is gated: `carta-ast`'s own `serde` feature turns on `compact_str/serde`.
compact_str = { version = "0.9" }
memchr = "2"
miniz_oxide = "0.9"
fancy-regex = "0.18"
quick-xml = "0.41"
insta = "1"
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
stacker = "0.1"

carta = { path = "crates/carta", version = "0.0.7" }
carta-ast = { path = "crates/carta-ast", version = "0.0.7" }
carta-core = { path = "crates/carta-core", version = "0.0.7" }
carta-highlight = { path = "crates/carta-highlight", version = "0.0.7" }
carta-readers = { path = "crates/carta-readers", version = "0.0.7" }
carta-writers = { path = "crates/carta-writers", version = "0.0.7" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(docsrs)"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

# Optimize dependencies in debug builds so test runs are not dominated by unoptimized deps.
[profile.dev.package."*"]
opt-level = 2

# Kept on in release (off by default there): a silent wrap in offset/count arithmetic is a latent parser bug.
[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
strip = "symbols"
