[package]
name = "carta-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
carta-core = { path = "../crates/carta-core" }
carta-readers = { path = "../crates/carta-readers" }
carta-highlight = { path = "../crates/carta-highlight" }

# One target per reader: each ingests untrusted bytes and must never panic. The `highlight` target is
# the analog for the tokenizer, which walks untrusted code through a regex-driven state machine.
# Writers are not fuzzed yet — they consume a typed `Document`, not bytes, so a writer target needs an
# `Arbitrary` AST generator. TODO: add `arbitrary` impls across the AST and a target per writer.
[[bin]]
name = "commonmark"
path = "fuzz_targets/commonmark.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json"
path = "fuzz_targets/json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "native"
path = "fuzz_targets/native.rs"
test = false
doc = false
bench = false

[[bin]]
name = "html"
path = "fuzz_targets/html.rs"
test = false
doc = false
bench = false

[[bin]]
name = "csv"
path = "fuzz_targets/csv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tsv"
path = "fuzz_targets/tsv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "opml"
path = "fuzz_targets/opml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rst"
path = "fuzz_targets/rst.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ipynb"
path = "fuzz_targets/ipynb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mediawiki"
path = "fuzz_targets/mediawiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dokuwiki"
path = "fuzz_targets/dokuwiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jira"
path = "fuzz_targets/jira.rs"
test = false
doc = false
bench = false

[[bin]]
name = "man"
path = "fuzz_targets/man.rs"
test = false
doc = false
bench = false

[[bin]]
name = "latex"
path = "fuzz_targets/latex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "org"
path = "fuzz_targets/org.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rtf"
path = "fuzz_targets/rtf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "highlight"
path = "fuzz_targets/highlight.rs"
test = false
doc = false
bench = false

[[bin]]
name = "docx"
path = "fuzz_targets/docx.rs"
test = false
doc = false
bench = false

[[bin]]
name = "epub"
path = "fuzz_targets/epub.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

# Detached from the root workspace: cargo-fuzz needs a nightly toolchain and a sanitizer, so this
# crate is built on its own (see fuzz/README.md), never by the stable-pinned workspace.
[workspace]
