[package]
name = "carta-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
carta-ast = { path = "../crates/carta-ast", features = ["arbitrary"] }
carta-core = { path = "../crates/carta-core" }
carta-readers = { path = "../crates/carta-readers" }
carta-writers = { path = "../crates/carta-writers" }
carta-highlight = { path = "../crates/carta-highlight" }

# One target per reader: each ingests untrusted bytes and must never panic. The `highlight` target is
# the analog for the tokenizer, which walks untrusted code through a regex-driven state machine.
[[bin]]
name = "commonmark"
path = "fuzz_targets/commonmark.rs"
test = false
doc = false
bench = false

[[bin]]
name = "json"
path = "fuzz_targets/json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "native"
path = "fuzz_targets/native.rs"
test = false
doc = false
bench = false

[[bin]]
name = "html"
path = "fuzz_targets/html.rs"
test = false
doc = false
bench = false

[[bin]]
name = "csv"
path = "fuzz_targets/csv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tsv"
path = "fuzz_targets/tsv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "opml"
path = "fuzz_targets/opml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rst"
path = "fuzz_targets/rst.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ipynb"
path = "fuzz_targets/ipynb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mediawiki"
path = "fuzz_targets/mediawiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dokuwiki"
path = "fuzz_targets/dokuwiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "jira"
path = "fuzz_targets/jira.rs"
test = false
doc = false
bench = false

[[bin]]
name = "man"
path = "fuzz_targets/man.rs"
test = false
doc = false
bench = false

[[bin]]
name = "latex"
path = "fuzz_targets/latex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "org"
path = "fuzz_targets/org.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rtf"
path = "fuzz_targets/rtf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "highlight"
path = "fuzz_targets/highlight.rs"
test = false
doc = false
bench = false

[[bin]]
name = "docx"
path = "fuzz_targets/docx.rs"
test = false
doc = false
bench = false

[[bin]]
name = "epub"
path = "fuzz_targets/epub.rs"
test = false
doc = false
bench = false

[[bin]]
name = "odt"
path = "fuzz_targets/odt.rs"
test = false
doc = false
bench = false

# One `write_*` target per writer module: each synthesizes an `Arbitrary` document (the JSON and
# native readers accept untrusted ASTs, so writers sit on the untrusted-input path too) and asserts
# the writer neither panics nor produces irreproducible output. Modules with several writer variants
# sharing one code path (markdown, html, epub) drive all variants from one target.

[[bin]]
name = "write_asciidoc"
path = "fuzz_targets/write_asciidoc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_beamer"
path = "fuzz_targets/write_beamer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_commonmark"
path = "fuzz_targets/write_commonmark.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_docx"
path = "fuzz_targets/write_docx.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_dokuwiki"
path = "fuzz_targets/write_dokuwiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_epub"
path = "fuzz_targets/write_epub.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_html"
path = "fuzz_targets/write_html.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_ipynb"
path = "fuzz_targets/write_ipynb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_jira"
path = "fuzz_targets/write_jira.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_json"
path = "fuzz_targets/write_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_latex"
path = "fuzz_targets/write_latex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_man"
path = "fuzz_targets/write_man.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_markdown"
path = "fuzz_targets/write_markdown.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_mediawiki"
path = "fuzz_targets/write_mediawiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_native"
path = "fuzz_targets/write_native.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_odt"
path = "fuzz_targets/write_odt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_opml"
path = "fuzz_targets/write_opml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_org"
path = "fuzz_targets/write_org.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_plain"
path = "fuzz_targets/write_plain.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_revealjs"
path = "fuzz_targets/write_revealjs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_rst"
path = "fuzz_targets/write_rst.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_rtf"
path = "fuzz_targets/write_rtf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_typst"
path = "fuzz_targets/write_typst.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

# Detached from the root workspace: cargo-fuzz needs a nightly toolchain and a sanitizer, so this
# crate is built on its own (see fuzz/README.md), never by the stable-pinned workspace.
[workspace]
