[package]
name = "carta-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
carta-ast = { path = "../crates/carta-ast", features = ["arbitrary"] }
carta-core = { path = "../crates/carta-core" }
carta-readers = { path = "../crates/carta-readers" }
carta-writers = { path = "../crates/carta-writers" }
carta-highlight = { path = "../crates/carta-highlight" }

# One target per reader: each ingests untrusted bytes and must never panic. The `highlight` target is
# the analog for the tokenizer, which walks untrusted code through a regex-driven state machine.
[[bin]]
name = "read_commonmark"
path = "fuzz_targets/read_commonmark.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_json"
path = "fuzz_targets/read_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_native"
path = "fuzz_targets/read_native.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_html"
path = "fuzz_targets/read_html.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_csv"
path = "fuzz_targets/read_csv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_tsv"
path = "fuzz_targets/read_tsv.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_opml"
path = "fuzz_targets/read_opml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_rst"
path = "fuzz_targets/read_rst.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_ipynb"
path = "fuzz_targets/read_ipynb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_mediawiki"
path = "fuzz_targets/read_mediawiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_dokuwiki"
path = "fuzz_targets/read_dokuwiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_jira"
path = "fuzz_targets/read_jira.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_man"
path = "fuzz_targets/read_man.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_latex"
path = "fuzz_targets/read_latex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_org"
path = "fuzz_targets/read_org.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_rtf"
path = "fuzz_targets/read_rtf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "highlight"
path = "fuzz_targets/highlight.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_docx"
path = "fuzz_targets/read_docx.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_epub"
path = "fuzz_targets/read_epub.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_odt"
path = "fuzz_targets/read_odt.rs"
test = false
doc = false
bench = false

# One `write_*` target per writer module: each synthesizes an `Arbitrary` document (the JSON and
# native readers accept untrusted ASTs, so writers sit on the untrusted-input path too) and asserts
# the writer neither panics nor produces irreproducible output. Modules with several writer variants
# sharing one code path (markdown, html, epub) drive all variants from one target.

[[bin]]
name = "write_asciidoc"
path = "fuzz_targets/write_asciidoc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_beamer"
path = "fuzz_targets/write_beamer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_commonmark"
path = "fuzz_targets/write_commonmark.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_docx"
path = "fuzz_targets/write_docx.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_dokuwiki"
path = "fuzz_targets/write_dokuwiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_epub"
path = "fuzz_targets/write_epub.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_html"
path = "fuzz_targets/write_html.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_ipynb"
path = "fuzz_targets/write_ipynb.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_jira"
path = "fuzz_targets/write_jira.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_json"
path = "fuzz_targets/write_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_latex"
path = "fuzz_targets/write_latex.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_man"
path = "fuzz_targets/write_man.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_markdown"
path = "fuzz_targets/write_markdown.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_mediawiki"
path = "fuzz_targets/write_mediawiki.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_native"
path = "fuzz_targets/write_native.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_odt"
path = "fuzz_targets/write_odt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_opml"
path = "fuzz_targets/write_opml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_org"
path = "fuzz_targets/write_org.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_plain"
path = "fuzz_targets/write_plain.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_revealjs"
path = "fuzz_targets/write_revealjs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_rst"
path = "fuzz_targets/write_rst.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_rtf"
path = "fuzz_targets/write_rtf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write_typst"
path = "fuzz_targets/write_typst.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1

# Detached from the root workspace: cargo-fuzz needs a nightly toolchain and a sanitizer, so this
# crate is built on its own (see fuzz/README.md), never by the stable-pinned workspace.
[workspace]
