[package]
name = "carta-ast"
description = "Document model (AST) and its JSON serialization."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["ast", "document", "markup", "serialization"]
categories = ["text-processing", "data-structures"]
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
unicode-general-category = { workspace = true }
compact_str = { workspace = true }
