[package]
name = "carta-ast"
description = "Document model (AST) and its JSON serialization."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["ast", "document", "markup", "serialization"]
categories = ["text-processing", "data-structures"]
publish.workspace = true

# docs.rs builds default features only; enable all so the JSON interchange codec is documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
# The JSON interchange (de)serialization: the AST's serde derives, the hand-written array codecs,
# the standalone JSON codec, and the `from_json`/`to_json`/`to_json_writer` entry points. Off by
# default so builds that never touch JSON omit serde, serde_json, and the derive proc-macro stack.
serde = ["dep:serde", "dep:serde_json", "dep:ryu", "dep:itoa", "dep:memchr", "compact_str/serde"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Number formatting for the JSON codec: shortest round-tripping decimals for floats and fast integer
# rendering. Pulled in only alongside the JSON codec.
ryu = { version = "1", optional = true }
itoa = { version = "1", optional = true }
# Vectorized byte search for the JSON codec's string scans.
memchr = { workspace = true, optional = true }
unicode-general-category = { workspace = true }
compact_str = { workspace = true }
