[package]
name = "carta-ast"
description = "Document model (AST) and its JSON serialization."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["ast", "document", "markup", "serialization"]
categories = ["text-processing", "data-structures"]
publish.workspace = true

# docs.rs builds default features only; enable all so the JSON interchange codec is documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
# The JSON interchange codec; off by default so builds that never touch JSON omit the serde stack.
serde = ["dep:serde", "dep:serde_json", "dep:ryu", "dep:itoa", "dep:memchr", "compact_str/serde"]
# `Arbitrary` impls across the document model; off by default, enabled by the fuzz targets.
arbitrary = ["dep:arbitrary", "compact_str/arbitrary"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Float/integer formatting for the JSON codec; pulled in only alongside it.
ryu = { version = "1", optional = true }
itoa = { version = "1", optional = true }
# Vectorized byte search for the JSON codec's string scans.
memchr = { workspace = true, optional = true }
unicode-general-category = { workspace = true }
compact_str = { workspace = true }
