[package]
name = "carta-cli"
description = "The carta command-line interface."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "carta"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
carta = { workspace = true }
clap = { workspace = true }
