[package]
name = "carta-core"
description = "Shared conversion options, error types, and text/attribute helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["markup", "document", "converter", "template"]
categories = ["text-processing"]
publish.workspace = true

[lints]
workspace = true

[features]
# The standalone template engine (`carta_core::template`). Off by default; enabled by `carta`'s
# `standalone` feature.
template = []

[dependencies]
carta-ast = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
