[package]
name = "carta-core"
description = "Shared conversion options, error types, and text/attribute helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["markup", "document", "converter", "template"]
categories = ["text-processing"]
publish.workspace = true

# docs.rs builds default features only; enable all so the template engine is documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
# The standalone template engine (`carta_core::template`). Off by default; enabled by `carta`'s
# `standalone` feature.
template = []
# Packaging primitives for container formats (`carta_core::container`): the ZIP builder/reader and
# XML emitter. Off by default; enabled by `carta`'s `write-epub` feature. Pulls in DEFLATE support.
container = ["dep:miniz_oxide"]
# Carry a syntax-highlighting configuration in the writer options. Off by default; enabled by
# `carta-writers`'s `highlight` feature. Pulls in the tokenizer catalog.
highlight = ["dep:carta-highlight"]

[dependencies]
carta-ast = { workspace = true }
carta-highlight = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miniz_oxide = { workspace = true, optional = true }
