[package]
name = "carta-core"
description = "Shared conversion options, error types, and text/attribute helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["markup", "document", "converter", "template"]
categories = ["text-processing"]
publish.workspace = true

# docs.rs builds default features only; enable all so the template engine is documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
# The template engine (`carta_core::template`); enabled by `carta`'s `standalone` feature.
template = []
# Container packaging (`carta_core::container`: ZIP, XML emitter); enabled by `carta`'s `write-epub`.
container = ["dep:miniz_oxide"]
# Highlighting configuration in the writer options; enabled by `carta-writers`'s `highlight`.
highlight = ["dep:carta-highlight"]
# `Error::Json` and `serde_json`; enabled by format features that (de)serialize JSON.
serde = ["dep:serde_json"]

[dependencies]
carta-ast = { workspace = true }
carta-highlight = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
miniz_oxide = { workspace = true, optional = true }
