[package]
name = "carta-readers"
description = "Input-format readers: parse a source format's text into the document model."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["markup", "parser", "markdown", "commonmark", "html"]
categories = ["text-processing", "parser-implementations"]
publish.workspace = true

# docs.rs builds default features only; enable all so every reader is documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = ["commonmark", "json", "html", "native", "csv", "tsv", "opml", "rst", "ipynb", "mediawiki", "dokuwiki", "jira", "man", "latex", "org", "rtf", "docx", "epub", "odt"]
commonmark = ["dep:unicode-general-category", "dep:caseless", "dep:serde_json"]
json = ["carta-ast/serde", "carta-core/serde"]
html = []
docx = ["carta-core/container"]
epub = ["html", "carta-core/container"]
odt = ["carta-core/container"]
native = []
csv = []
tsv = ["csv"]
opml = ["commonmark", "html"]
rst = []
ipynb = ["commonmark", "carta-core/serde"]
mediawiki = ["html"]
dokuwiki = ["dep:unicode-normalization"]
jira = []
man = []
latex = []
org = []
rtf = []

[dependencies]
carta-ast = { workspace = true }
carta-core = { workspace = true }
# Vectorized byte search for the tokenizers' delimiter scans.
memchr = { workspace = true }
unicode-general-category = { workspace = true, optional = true }
unicode-normalization = { workspace = true, optional = true }
caseless = { workspace = true, optional = true }
# Parses JSON metadata files; YAML files go through the in-crate parser.
serde_json = { workspace = true, optional = true }

[build-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
