[package]
name = "carta-writers"
description = "Output-format writers: render the document model to a target format's text."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = ["html", "json", "plain", "latex", "native", "commonmark", "rst", "mediawiki", "typst", "dokuwiki", "jira", "asciidoc", "man"]
html = ["dep:unicode-general-category"]
json = []
plain = []
latex = []
native = []
commonmark = ["html"]
rst = []
mediawiki = []
typst = []
dokuwiki = []
jira = []
asciidoc = []
man = []

[dependencies]
carta-ast = { workspace = true }
carta-core = { workspace = true }
unicode-general-category = { workspace = true, optional = true }

[build-dependencies]
serde_json = { workspace = true }
