[package]
name = "carta-writers"
description = "Output-format writers: render the document model to a target format's text."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["markup", "markdown", "html", "latex", "converter"]
categories = ["text-processing"]
publish.workspace = true

# docs.rs builds default features only; enable all so every writer is documented.
[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["html", "json", "plain", "latex", "native", "commonmark", "markdown", "gfm", "rst", "mediawiki", "typst", "dokuwiki", "jira", "asciidoc", "man", "opml", "org", "beamer", "revealjs", "ipynb", "epub"]
html = ["dep:unicode-general-category"]
epub = ["html", "carta-core/container"]
json = []
plain = []
latex = []
native = []
commonmark = ["html"]
markdown = ["html"]
gfm = ["html"]
rst = []
mediawiki = []
typst = []
dokuwiki = []
jira = []
asciidoc = []
man = []
org = []
ipynb = ["markdown"]
opml = ["markdown"]
beamer = ["latex", "slides"]
revealjs = ["html", "slides"]
slides = []

[dependencies]
carta-ast = { workspace = true }
carta-core = { workspace = true }
unicode-general-category = { workspace = true, optional = true }

[build-dependencies]
serde_json = { workspace = true }
