[package]
name = "carta-writers"
description = "Output-format writers: render the document model to a target format's text."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["markup", "markdown", "html", "latex", "converter"]
categories = ["text-processing"]
publish.workspace = true

# docs.rs builds default features only; enable all so every writer is documented.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = ["html", "json", "plain", "latex", "native", "commonmark", "markdown", "gfm", "rst", "mediawiki", "typst", "dokuwiki", "jira", "asciidoc", "man", "opml", "org", "beamer", "revealjs", "ipynb", "epub", "docx", "odt", "highlight", "rtf"]
html = ["dep:unicode-general-category"]
# Syntax highlighting for code blocks in the writers that colorize them (HTML family, LaTeX, DOCX).
highlight = ["dep:carta-highlight", "carta-core/highlight"]
epub = ["html", "carta-core/container"]
docx = ["carta-core/container"]
odt = ["carta-core/container"]
json = ["carta-ast/serde", "carta-core/serde"]
plain = []
latex = []
native = []
commonmark = ["html"]
markdown = ["html"]
gfm = ["html"]
rst = []
rtf = []
mediawiki = []
typst = []
dokuwiki = []
jira = []
asciidoc = []
man = []
org = []
ipynb = ["markdown"]
opml = ["markdown"]
beamer = ["latex", "slides"]
revealjs = ["html", "slides"]
slides = []

[dependencies]
carta-ast = { workspace = true }
carta-core = { workspace = true }
carta-highlight = { workspace = true, optional = true }
unicode-general-category = { workspace = true, optional = true }
# Grows the stack on demand while serializing, so a deeply nested block or inline tree cannot exhaust
# the thread's stack during the writer's per-level recursion.
stacker = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
